--- a/css/styles.css
+++ b/css/styles.css
@@ -138,7 +138,7 @@ nav h1 a {
   text-align: center;
 }
 #restaurants-list li {
-  display: grid;
+  display: inline-block;
   background-color: #fff;
   border: 2px solid #ccc;
   font-family: Arial,sans-serif;
