--- a/css/styles.css
+++ b/css/styles.css
@@ -106,7 +106,7 @@ nav h1 a {
 /* ====================== Restaurant Filtering ====================== */
 .filter-options {
   width: 100%;
-  height: 50px;
+  padding: 5px;
   background-color: #3397DB;
   align-items: center;
 }
@@ -273,4 +273,18 @@ nav h1 a {
 }
 #restaurant-hours td {
   color: #666;
+}
+
+@media only screen and (max-width: 360px){
+  #restaurants-list li {
+    display: inline-block;
+  background-color: #fff;
+  border: 2px solid #ccc;
+  font-family: Arial,sans-serif;
+  margin: 0 10px;
+  min-height: 300px;
+  padding: 0 30px 25px;
+  text-align: left;
+  width: 0px;
+  }
 }
